crates/mlir-rs/src/dialect/snapshots/mlir_rs__dialect__memref__tests__cast.snap
---
source: crates/mlir-rs/src/dialect/memref.rs
expression: module.as_operation()
---
module {
  func.func @foo() {
    %alloca = memref.alloca() : memref<42xf64>
    %cast = memref.cast %alloca : memref<42xf64> to memref<?xf64>
    return
  }
}
