crates/mlir-rs/src/dialect/snapshots/mlir_rs__dialect__memref__tests__compile_global.snap
---
source: crates/mlir-rs/src/dialect/memref.rs
expression: module.as_operation()
---
module {
  memref.global @foo : memref<index> = uninitialized
}
