crates/mlir-rs/src/dialect/snapshots/mlir_rs__dialect__memref__tests__store_with_index.snap
---
source: crates/mlir-rs/src/dialect/memref.rs
expression: module.as_operation()
---
module {
  func.func @foo() {
    %alloca = memref.alloca() : memref<1xindex>
    %idx42 = index.constant 42
    %idx0 = index.constant 0
    memref.store %idx42, %alloca[%idx0] : memref<1xindex>
    return
  }
}
